--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,6 @@
   width: 85%;
   background-color: transparent;
   border: none;
-  color: white;
   outline: none;
   border-bottom: 1px solid #445366;
   font-size: 1em;
@@ -238,6 +237,12 @@
   50%  {color:white; left:0px; font-size: 42px;}
   75%  {color:yellow; left:50px; font-size: 36px;}
   100% {color:green; left:100px;font-size: 32px;}
+}
+
+.signup-logo{
+  border: 5px solid gray;
+  border-radius: 50%;
+  padding: 25px;
 }
 
 
