--- a/src/App.css
+++ b/src/App.css
@@ -130,6 +130,7 @@
   background-color: transparent;
   border: none;
   outline: none;
+  color: #ffffff;
   border-bottom: 1px solid #445366;
   font-size: 1em;
   font-weight: 300;
@@ -243,6 +244,11 @@
   border: 5px solid gray;
   border-radius: 50%;
   padding: 25px;
+}
+
+.landing-row{
+  background-image: url("../src/assets/login_bg.jpg");
+  height: 100vh;
 }
 
 
